# QuantumAnalyzer

./: .gitignore  MIGRATION_PLAN.md  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: build-installers.yml  ci.yml
packaging/deb/DEBIAN/: control
packaging/deb/usr/share/applications/: quantumanalyzer.desktop
packaging/windows/: installer.nsi
src/quantumanalyzer/: __init__.py
src/quantumanalyzer/common/: __init__.py  cache.py  legacy_import.py  search.py  updater.py
src/quantumanalyzer/fundamental/: cache.py  config.py  models.py  utils.py
src/quantumanalyzer/gui/: __init__.py  app.py  fundamental_view.py  fundamental_workers.py  technical_view.py  technical_workers.py  theme.py
src/quantumanalyzer/technical/: __init__.py  data.py  updater.py
tests/common/: test_cache.py  test_legacy_import.py  test_search.py  test_updater.py
tests/fundamental/: test_cache.py  test_models.py  test_models_data.py  test_utils.py
tests/gui/: test_fundamental_view_layout.py  test_fundamental_view_workers.py  test_fundamental_workers.py  test_technical_view.py  test_unified_app.py
tests/technical/: test_backtest.py  test_cli.py  test_data_fetch.py  test_data_search.py  test_data_timeframes.py  test_engine.py  test_indicators.py  test_risk.py  test_updater.py  test_version.py
